Fixed bug with menu not showing on desktop view

--- a/style.css
+++ b/style.css
@@ -357,6 +357,16 @@ nav label{
         
     }
 
+    #open_dropdown:not(:target) ~ .nav-links{
+        width: 100%;
+        height: 100%;
+        max-width: 700px;
+        opacity: 1;
+        transition: 0.5s;
+        flex-direction: row;
+        display: flex;
+        align-items: center;
+    }
 
     .nav-links{
         width: 100%;
@@ -417,7 +427,9 @@ nav label{
         font-size: 1.3em;
     }
 
-   
+    .menutitle2{
+        display: none;
+    }
 }
 
 @media (min-width:1080px){
